--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,16 +7,16 @@ body
     margin: 0;
     padding: 0;
 }
-container
+#container
 {
     width: 70%;
     padding: 1em;
     text-align: left;
     border: 1px solid #DDD;
-    margin: O auto;
+    margin: 0 auto;
 }
 
-container h1
+#container h1
 {
     font-size: 20px;
 }
