--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: rgb(216, 29, 29);
+    color: #333;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
@@ -18,3 +18,27 @@ body
     padding: 0.5em;
 }
 
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
+#container
+{
+    width: 70%;
+    padding: 0;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
+}
+#post
+{
+    padding: 1em;
+}
